namespace GoalGrow.Entity.Enums
{
    public enum RelationshipStatus
    {
        Active = 1,
        Suspended = 2,
        Terminated = 3
    }
}
