using System;
using System.Collections.Generic;
using System.Text;

namespace GoalGrow.Entity.Enums
{
    public enum UserType
    {
        InvestorUser = 1,
        ConsultantUser = 2,
        AdminUser = 3
    }
}
